add web submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "slowsniper"]
 	path = slowsniper
 	url = https://github.com/slow/nitro-sniper.git
+[submodule "spiderweb"]
+	path = spiderweb
+	url = https://github.com/GiorgioBrux/sniperweb.git
