--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/GiorgioBrux/nitro-sniper-ui#readme",
   "dependencies": {
     "socket.io": "^4.2.0",
-    "on-change": "^4.0.0"
+    "on-change": "^4.0.0",
+    "simple-git": "^2.45.1"
   }
 }
